# 1box-dashboard

./: .env.example  .gitignore  CHANGES.md  CLAUDE.md  PROJECT.md  README.md  dev-server.js  docker-compose.yml  index.html  package.json  pyproject.toml  requirements.txt  screenshot-loader.js  screenshot.js  server.js  start.sh
.streamlit/: config.toml
backend/: Dockerfile  app.py  auth_login.py  ga4_client.py  requirements.txt  sheets_client.py
config/: alerts.yaml  budget-targets.json  google-ads.yaml.example  settings.py
nginx/: default.conf
scripts/: create_budget_sheet.py  seed_demo_data.py  setup_credentials.py
src/: main.py
src/alerts/: engine.py  rules.py
src/alerts/notifiers/: base.py  email_notifier.py  webhook.py
src/analytics/: anomaly.py  forecast.py  scoring.py
src/api/: __init__.py  alerts.py  analytics.py  campaigns.py  dependencies.py  pipeline.py
src/dashboard/: app.py  data_loader.py  theme.py  utils.py
src/dashboard/components/: charts.py  filters.py  kpi_cards.py
src/dashboard/pages/: 01_overview.py  02_campaigns.py  03_keywords.py  04_traffic.py  05_conversions.py  06_alerts.py  __init__.py
src/fetchers/: ga4.py  google_ads.py
src/models/: __init__.py  database.py  schemas.py
src/pipeline/: etl.py  scheduler.py
templates/email/: alert.html  weekly_digest.html
tests/: conftest.py  test_alerts.py  test_api.py  test_fetchers.py  test_pipeline.py
